--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 </head>
 
 <body>
+	<div class='score'>
+		<span id='correct'></span>
+		<span id='incorrect'></span>
+	</div>
 	<div id='clock'></div>
 	<div id='game'>
-
 	</div>
-
 </body>
 
 </html>
