reset functionality & global variables

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 
 <body>
 	<div class='score'>
-		<span id='correct'></span>
-		<span id='incorrect'></span>
+		<span id='question_number'> </span>
+		<span id='correct'>correct: 0</span>
+		<span id='incorrect'>incorrect: 0</span>
 	</div>
 	<div id='clock'></div>
 	<div id='game'>
