--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js'></script>
 	<script src='assets/javascript/app.js'></script>
-	<link src='assets/css/styles.css' rel='stylesheet' type='text/css' />
+	<link href='assets/css/styles.css' rel='stylesheet' type='text/css' />
 </head>
 
 <body>
